fix bug file
